--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 ---
 layout: default
-title: Your New Jekyll Site
+title: Russell Matney
 ---
 
 <div id="home">
   <h1>Blog Posts</h1>
+
   <ul class="posts">
+    TECH:
+    {% for post in site.categories.techsposure %}
+      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+    {% endfor %}
+  </ul>
+
+
+  <ul class="posts">
+    ALL:
     {% for post in site.posts %}
+      {{post.categories}}
       <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
   </ul>
