--- a/index.html
+++ b/index.html
@@ -4,27 +4,31 @@ title: Russell Matney
 ---
 
 <div id="home">
-  <h1>Blog Posts</h1>
+  <h1>Latest Posts</h1>
 
-  <ul class="posts">
-    5 latest TECH:
-    {% for post in site.categories.techsposure limit:5 %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
+  <div class="five-latest">
+    <div class="row-fluid">
+      <ul class="posts span4">
+        <h3>Techsposure</h3>
+        {% for post in site.categories.techsposure limit:5 %}
+          <li><span>{{ post.date | date: "%h '%y" }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+        {% endfor %}
+      </ul>
 
-  <ul class="posts">
-    5 latest Get It Write:
-    {% for post in site.categories.getitwrite limit:5 %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
+      <ul class="posts span4">
+        <h3>Get It Write</h3>
+        {% for post in site.categories.getitwrite limit:5 %}
+          <li><span>{{ post.date | date: "%h '%y" }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+        {% endfor %}
+      </ul>
 
-  <ul class="posts">
-    5 latest 100-worders:
-    {% for post in site.categories.100-worders limit:5 %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
+      <ul class="posts span4">
+        <h3>100-word Stories</h3>
+        {% for post in site.categories.100-worders limit:5 %}
+          <li><span>{{ post.date | date: "%h '%y" }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+        {% endfor %}
+      </ul>
+    </div>
+  </div>
 
 </div>
