tech, write, 100 indiv. pages

--- a/todo.html
+++ b/todo.html
@@ -1,7 +1,10 @@
-less or sass + bootstrap
-impact demos
-angular jekyll?
-ember jekyll?
-front page: 5 of each cat, all post views, search/filter/paging?
-social
-analytics
+<ul>
+	<li>less or sass + bootstrap</li>
+	<li>impact demos</li>
+	<li>angular jekyll?</li>
+	<li>ember jekyll?</li>
+	<li>front page: 5 of each cat (techsposure, get it write, 100-worders, demos, etc), all post views, search/filter/paging?</li>
+	<li>other page: 5 latests: spotify, pocket, app downloads, favorite indie games, tweets, medium poems, pins?, netflix?</li>
+	<li>social</li>
+	<li>analytics</li>
+</ul>
