--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ title: Russell Matney
         {% for post in site.categories.techsposure limit:5 %}
           <li><span>{{ post.date | date: "%h '%y" }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
         {% endfor %}
+        <li><a href="/techsposure.html">all Techsposure posts</a></li>
       </ul>
 
       <ul class="posts span4">
@@ -20,6 +21,7 @@ title: Russell Matney
         {% for post in site.categories.getitwrite limit:5 %}
           <li><span>{{ post.date | date: "%h '%y" }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
         {% endfor %}
+        <li><a href="/getitwrite.html">all Get It Write posts</a></li>
       </ul>
 
       <ul class="posts span4">
@@ -27,6 +29,7 @@ title: Russell Matney
         {% for post in site.categories.100-worders limit:5 %}
           <li><span>{{ post.date | date: "%h '%y" }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
         {% endfor %}
+        <li><a href="/100-word-stories.html">all 100-word Stories</a></li>
       </ul>
     </div>
   </div>
