--- a/todo.html
+++ b/todo.html
@@ -4,7 +4,7 @@
 	<li>angular jekyll?</li>
 	<li>ember jekyll?</li>
 	<li>front page: 5 of each cat (techsposure, get it write, 100-worders, demos, etc), all post views, search/filter/paging?</li>
-	<li>other page: 5 latests: spotify, pocket, app downloads, favorite indie games, tweets, medium poems, pins?, netflix?</li>
+	<li>other page: 5 latests: spotify, pocket, app downloads, indie games, tweets, medium poems, pins?, netflix?, github pushes/stars</li>
 	<li>social</li>
 	<li>analytics</li>
 </ul>
