--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@ title: Russell Matney
           <li><span>{{ post.date | date: "%h '%y" }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
         {% endfor %}
       </ul>
+
+      <ul class="posts span4">
+        <h3>Demos <a href="/demos.html"> (all demos)</a></h3>
+        {% for post in site.categories.demos limit:5 %}
+          <li><span>{{ post.date | date: "%h '%y" }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+        {% endfor %}
+      </ul>
     </div>
   </div>
 
