--- a/_posts/demos/2013-08-16-discloverly.html
+++ b/_posts/demos/2013-08-16-discloverly.html
@@ -11,4 +11,4 @@ tags:
 <script type="text/javascript" src="../../../discloverly/game.min.js"></script>
 <canvas style="margin:auto;" id="canvas"></canvas>
 
-<p>Set a highscore? Take a screenshot and I'll post it here.</p>
+<p>Set a highscore? Send me a screenshot and I'll post it here.</p>
