--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ title: Russell Matney
 
       <ul class="posts span4">
         <h3>100-word Stories <a href="/100-word-stories.html"> (more stories)</a></h3>
+        <p>100 words, on the dot, no ifs, ands, or butts.</p>
         {% for post in site.categories.100-worders limit:5 %}
           <li><span>{{ post.date | date: "%h '%y" }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
         {% endfor %}
@@ -34,7 +35,7 @@ title: Russell Matney
 
       <ul class="posts span4">
         <h3>Demos <a href="/demos.html"> (more demos)</a></h3>
-        <p>Just a few games for now</p>
+        <p>Just a few games for now.</p>
         {% for post in site.categories.demos limit:5 %}
           <li><span>{{ post.date | date: "%h '%y" }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
         {% endfor %}
