--- a/demos.html
+++ b/demos.html
@@ -8,7 +8,11 @@ title: Russell Matney - Demos
 
   <div class="demos">
     <ul class="posts">
-        <li><a href="demos/discloverly/game.html">Discloverly</a></li>
+      {% for post in site.categories.demos %}
+        <li>
+          <span>{{ post.date | date: "%h '%y" }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a>
+        </li>
+      {% endfor %}
     </ul>
   </div>
 
