--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ title: Russell Matney
       </ul>
 
       <ul class="posts span4">
-        <h3>100-word Stories <a href="/100-word-stories.html"> (more stories)</a></h3>
+        <h3>100-word Stories <a href="/100-worders.html"> (more stories)</a></h3>
         <p>100 words, on the dot, no ifs, ands, or butts.</p>
         {% for post in site.categories.100-worders limit:5 %}
           <li><span>{{ post.date | date: "%h '%y" }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
