--- a/index.html
+++ b/index.html
@@ -3,42 +3,76 @@ layout: default
 title: Russell Matney
 ---
 
-<div id="home">
-  <div class="five-latest">
-    <div class="row-fluid">
-      <ul class="posts span4">
-        <h3>Techsposure <a href="/techsposure.html">(more posts)</a></h3>
-        <p>For code monkeys and...future code monkeys?</p>
-        {% for post in site.categories.techsposure limit:5 %}
-          <li><span>{{ post.date | date: "%h '%y" }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-        {% endfor %}
-      </ul>
+<script type="text/javascript" src="http://code.angularjs.org/angular-1.0.1.min.js"></script>
+<script type="text/javascript" src="/js/jekyll-search-controller.js"></script>
 
-      <ul class="posts span4">
-        <h3>Get It Write <a href="/getitwrite.html">(more posts)</a></h3>
-        <p>I'm definitely a writer. Or, at least, a crazy person.</p> 
-        {% for post in site.categories.getitwrite limit:5 %}
-          <li><span>{{ post.date | date: "%h '%y" }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-        {% endfor %}
-        <li></li>
-      </ul>
+<script type="text/javascript">
+   // Using liquid to populate JeykllApp.posts array
+   JekyllApp.posts = [{% for post in site.posts %}{"title" : "{{ post.title }}", "url" : "{{ post.url }}", "date" : "{{ post.date | date_to_string }}", "content" : "{{ post.content | strip_html | strip_newlines | truncate : 120 }}"}{% if forloop.rindex0 != 0 %},{% endif %}{% endfor %}];
+   
+   JekyllApp.tech_posts = [{% for post in site.categories.techsposure %}{"title" : "{{ post.title }}", "url" : "{{ post.url }}", "date" : "{{ post.date | date_to_string }}", "content" : "{{ post.content | strip_html | strip_newlines | truncate : 120 }}"}{% if forloop.rindex0 != 0 %},{% endif %}{% endfor %}];
 
-      <ul class="posts span4">
-        <h3>100-word Stories <a href="/100-worders.html"> (more stories)</a></h3>
-        <p>100 words, on the dot, no ifs, ands, or butts.</p>
-        {% for post in site.categories.100-worders limit:5 %}
-          <li><span>{{ post.date | date: "%h '%y" }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-        {% endfor %}
-      </ul>
+  JekyllApp.getitwrite_posts = [{% for post in site.categories.getitwrite %}{"title" : "{{ post.title }}", "url" : "{{ post.url }}", "date" : "{{ post.date | date_to_string }}", "content" : "{{ post.content | strip_html | strip_newlines | truncate : 120 }}"}{% if forloop.rindex0 != 0 %},{% endif %}{% endfor %}];
 
-      <ul class="posts span4">
-        <h3>Demos <a href="/demos.html"> (more demos)</a></h3>
-        <p>Just one game for now.</p>
-        {% for post in site.categories.demos limit:5 %}
-          <li><span>{{ post.date | date: "%h '%y" }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-        {% endfor %}
-      </ul>
-    </div>
+  JekyllApp['100_worders_posts'] = [{% for post in site.categories['100-worders'] %}{"title" : "{{ post.title }}", "url" : "{{ post.url }}", "date" : "{{ post.date | date_to_string }}", "content" : "{{ post.content | strip_html | strip_newlines | truncate : 120 }}"}{% if forloop.rindex0 != 0 %},{% endif %}{% endfor %}];
+
+  JekyllApp.demos_posts = [{% for post in site.categories.demos %}{"title" : "{{ post.title }}", "url" : "{{ post.url }}", "date" : "{{ post.date | date_to_string }}", "content" : "{{ post.content | strip_html | strip_newlines | truncate : 120 }}"}{% if forloop.rindex0 != 0 %},{% endif %}{% endfor %}];
+
+</script>
+
+<div id="search-container" class="entrance" ng-app="JekyllApp" ng-controller="JekyllSearchController">
+
+  <div class="entrance-item">
+    <p><input id="searchText" type="search" placeholder="Live Search Posts..." ng-model-instant ng-model="searchText" />
   </div>
 
+  <div id="home">
+    <div class="five-latest">
+      <div class="row-fluid">
+        <ul class="posts span4">
+          <h3>Techsposure <a href="/techsposure.html">(more posts)</a></h3>
+          <p>For code monkeys and...future code monkeys?</p>
+
+          <li ng-repeat="post in tech_posts | filter:searchText | limitTo: 5">
+             <span ng-bind-html-unsafe="post.date | date:'MMM d, y' | highlight:searchText"></span> &raquo;
+            <a ng-href="{{ '{{ post.url ' }}}}" ng-click="externalLink()"
+               ng-bind-html-unsafe="post.title | highlight:searchText"></a>
+          </li>
+
+        </ul>
+
+        <ul class="posts span4">
+          <h3>Get It Write <a href="/getitwrite.html">(more posts)</a></h3>
+          <p>I'm definitely a writer. Or, at least, a crazy person.</p> 
+          <li ng-repeat="post in getitwrite_posts | filter:searchText | limitTo: 5">
+             <span ng-bind-html-unsafe="post.date | date:'MMM d, y' | highlight:searchText"></span> &raquo;
+            <a ng-href="{{ '{{ post.url ' }}}}" ng-click="externalLink()"
+               ng-bind-html-unsafe="post.title | highlight:searchText"></a>
+          </li>
+          <li></li>
+        </ul>
+
+        <ul class="posts span4">
+          <h3>100-word Stories <a href="/100-worders.html"> (more stories)</a></h3>
+          <p>100 words, on the dot, no ifs, ands, or butts.</p>
+          <li ng-repeat="post in hundred_worders_posts | filter:searchText | limitTo: 5">
+             <span ng-bind-html-unsafe="post.date | date:'MMM d, y' | highlight:searchText"></span> &raquo;
+            <a ng-href="{{ '{{ post.url ' }}}}" ng-click="externalLink()"
+               ng-bind-html-unsafe="post.title | highlight:searchText"></a>
+          </li>
+        </ul>
+
+        <ul class="posts span4">
+          <h3>Demos <a href="/demos.html"> (more demos)</a></h3>
+          <p>Just one game for now.</p>
+          <li ng-repeat="post in demos_posts | filter:searchText | limitTo: 5">
+             <span ng-bind-html-unsafe="post.date | date:'MMM d, y' | highlight:searchText"></span> &raquo;
+            <a ng-href="{{ '{{ post.url ' }}}}" ng-click="externalLink()"
+               ng-bind-html-unsafe="post.title | highlight:searchText"></a>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+  </div>
 </div>
