--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ title: Russell Matney
       <div class="row-fluid">
         <ul class="posts span4">
           <li ng-repeat="post in tech_posts | filter:searchText | limitTo: 5">
-            <span ng-show="$first">
+            <span ng-if="$first">
               <h3>Techsposure <a href="/techsposure.html">(more posts)</a></h3>
               <p>For code monkeys and...future code monkeys?</p>
             </span>
@@ -29,7 +29,7 @@ title: Russell Matney
 
         <ul class="posts span4">
           <li ng-repeat="post in getitwrite_posts | filter:searchText | limitTo: 5">
-            <span ng-show="$first">
+            <span ng-if="$first">
               <h3>Get It Write <a href="/getitwrite.html">(more posts)</a></h3>
               <p>I'm definitely a writer. Or, at least, a crazy person.</p> 
             </span>
@@ -41,7 +41,7 @@ title: Russell Matney
 
         <ul class="posts span4">
           <li ng-repeat="post in hundred_worders_posts | filter:searchText | limitTo: 5">
-            <span ng-show="$first">
+            <span ng-if="$first">
               <h3>100-word Stories <a href="/100-worders.html"> (more stories)</a></h3>
               <p>100 words, on the dot, no ifs, ands, or butts.</p>
             </span>
@@ -53,7 +53,7 @@ title: Russell Matney
 
         <ul class="posts span4">
           <li ng-repeat="post in demos_posts | filter:searchText | limitTo: 5">
-            <span ng-show="$first">
+            <span ng-if="$first">
               <h3>Demos <a href="/demos.html"> (more demos)</a></h3>
               <p>Just one game for now.</p>
             </span>
