removes old post drafts, writes draft for new one

--- a/todo.html
+++ b/todo.html
@@ -7,4 +7,6 @@
 	<li>other page: 5 latests: spotify, pocket, app downloads, indie games, tweets, medium poems, pins?, netflix?, github pushes/stars</li>
 	<li>social</li>
 	<li>analytics</li>
+  <li>helper pages - shortcuts i use (chrome, sublime)</li>
+  <li>resource pages - learning resources, list/tag languages + difficulty level</li>
 </ul>
