adds theme to 404, todo pages

--- a/todo.html
+++ b/todo.html
@@ -1,3 +1,7 @@
+---
+layout: page
+title: TODO
+---
 <ul>
   <li>other page: 5 latests: spotify, pocket, app downloads, indie games, tweets, medium poems, pins?, netflix?, github pushes/stars</li>
   <li>analytics</li>
