--- a/100-worders.html
+++ b/100-worders.html
@@ -1,6 +1,8 @@
 ---
-layout: default
+layout: page
 title: Russell Matney - 100-word Stories
+header: 100-worders
+group: navigation
 ---
 
 <div id="home">
