--- a/100-worders.html
+++ b/100-worders.html
@@ -1,19 +1,11 @@
 ---
 layout: page
-title: Russell Matney - 100-word Stories
+title: 100-word Stories
 header: 100-worders
 group: navigation
 ---
 
-<div id="home">
-  <h1>100-word Stories</h1>
+{% include JB/setup %}
 
-  <div class="100-worders">
-    <ul class="posts">
-      {% for post in site.categories.100-worders %}
-        <li><span>{{ post.date | date: "%h '%y" }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-      {% endfor %}
-    </ul>
-  </div>
-
-</div>
+{% assign posts_collate = site.categories.100-worders %}
+{% include JB/posts_collate %}
