--- a/getitwrite.html
+++ b/getitwrite.html
@@ -1,17 +1,10 @@
 ---
-layout: default
-title: Russell Matney - Get It Write
+layout: page
+title: Get It Write
+group: navigation
 ---
 
-<div id="home">
-  <h1>Get It Write</h1>
+{% include JB/setup %}
 
-  <div class="get-it-write">
-    <ul class="posts">
-      {% for post in site.categories.getitwrite %}
-        <li><span>{{ post.date | date: "%h '%y" }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-      {% endfor %}
-    </ul>
-  </div>
-
-</div>
+{% assign posts_collate = site.categories.getitwrite %}
+{% include JB/posts_collate %}
