--- a/techsposure.html
+++ b/techsposure.html
@@ -1,17 +1,9 @@
 ---
-layout: default
-title: Russell Matney - Techsposure
+layout: page
+title: Techsposure
 ---
 
-<div id="home">
-  <h1>Techsposure</h1>
+{% include JB/setup %}
 
-  <div class="techsposure">
-    <ul class="posts">
-      {% for post in site.categories.techsposure %}
-        <li><span>{{ post.date | date: "%h '%y" }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-      {% endfor %}
-    </ul>
-  </div>
-
-</div>
+{% assign posts_collate = site.categories.techsposure %}
+{% include JB/posts_collate %}
